gc.output
Terminals unused in grammar

   BREAK
   DEFAULT
   INTERFACE
   SELECT
   CASE
   DEFER
   GO
   MAP
   STRUCT
   CHAN
   ELSE
   GOTO
   SWITCH
   CONST
   FALLTHROUGH
   IF
   RANGE
   TYPE
   CONTINUE
   FOR
   COL
   DOT
   EQ
   ASSIGN
   PLUS
   MINUS
   SLASH
   INC
   DEC


State 27 conflicts: 2 shift/reduce
State 35 conflicts: 1 reduce/reduce
State 67 conflicts: 1 shift/reduce
State 83 conflicts: 5 shift/reduce


Grammar

    0 $accept: SourceFile $end

    1 SourceFile: PackageClause SC ImportDecl SC TopLevelDecl SC

    2 PackageClause: PACKAGE PackageName

    3 PackageName: IDENTIFIER

    4 ImportDecl: ImportDecl IMPORT PackageName
    5           | %empty

    6 Block: LCB StatementList RCB

    7 StatementList: StatementList Statement SC
    8              | %empty

    9 Type: TypeName
   10     | TypeLit
   11     | LRB Type RRB

   12 TypeName: IDENTIFIER

   13 TypeLit: ArrayType
   14        | PointerType
   15        | FunctionType

   16 ArrayType: LSB ArrayLength RSB ElementType

   17 ArrayLength: Expression

   18 ElementType: Type

   19 PointerType: STAR BaseType

   20 BaseType: Type

   21 FunctionType: FUNC Signature

   22 Signature: Parameters Result
   23          | Parameters

   24 Result: Parameters
   25       | Type

   26 Parameters: LRB ParameterList RRB
   27           | LRB RRB

   28 ParameterList: ParameterList COM ParameterDecl
   29              | ParameterDecl

   30 ParameterDecl: IdentifierList DOTS Type
   31              | IdentifierList Type
   32              | DOTS Type
   33              | Type

   34 IdentifierList: IdentifierList COM IDENTIFIER
   35               | IDENTIFIER

   36 Declaration: ConstDecl
   37            | VarDecl

   38 TopLevelDecl: TopLevelDecl Declaration
   39             | TopLevelDecl FuncDecl
   40             | %empty

   41 FuncDecl: FUNC FunctionName Signature FunctionBody

   42 FunctionName: IDENTIFIER

   43 FunctionBody: Block
   44             | %empty

   45 Expression: UNARY_OP
   46           | Expression binary_op Expression

   47 binary_op: LOG_OR
   48          | LOG_AND
   49          | REL_OP
   50          | ADD_OP
   51          | MUL_OP

   52 ConstDecl: IDENTIFIER

   53 VarDecl: VAR IdentifierList

   54 Statement: RETURN IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
BREAK (258)
DEFAULT (259)
FUNC (260) 21 41
INTERFACE (261)
SELECT (262)
CASE (263)
DEFER (264)
GO (265)
MAP (266)
STRUCT (267)
CHAN (268)
ELSE (269)
GOTO (270)
PACKAGE (271) 2
SWITCH (272)
CONST (273)
FALLTHROUGH (274)
IF (275)
RANGE (276)
TYPE (277)
CONTINUE (278)
FOR (279)
IMPORT (280) 4
RETURN (281) 54
VAR (282) 53
SC (283) 1 7
COL (284)
COM (285) 28 34
DOTS (286) 30 32
DOT (287)
LRB (288) 11 26 27
RRB (289) 11 26 27
LSB (290) 16
RSB (291) 16
LCB (292) 6
RCB (293) 6
EQ (294)
ASSIGN (295)
PLUS (296)
MINUS (297)
STAR (298) 19
SLASH (299)
INC (300)
DEC (301)
LOG_AND (302) 48
LOG_OR (303) 47
REL_OP (304) 49
ADD_OP (305) 50
MUL_OP (306) 51
UNARY_OP (307) 45
IDENTIFIER (308) 3 12 34 35 42 52 54


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
SourceFile (55)
    on left: 1, on right: 0
PackageClause (56)
    on left: 2, on right: 1
PackageName (57)
    on left: 3, on right: 2 4
ImportDecl (58)
    on left: 4 5, on right: 1 4
Block (59)
    on left: 6, on right: 43
StatementList (60)
    on left: 7 8, on right: 6 7
Type (61)
    on left: 9 10 11, on right: 11 18 20 25 30 31 32 33
TypeName (62)
    on left: 12, on right: 9
TypeLit (63)
    on left: 13 14 15, on right: 10
ArrayType (64)
    on left: 16, on right: 13
ArrayLength (65)
    on left: 17, on right: 16
ElementType (66)
    on left: 18, on right: 16
PointerType (67)
    on left: 19, on right: 14
BaseType (68)
    on left: 20, on right: 19
FunctionType (69)
    on left: 21, on right: 15
Signature (70)
    on left: 22 23, on right: 21 41
Result (71)
    on left: 24 25, on right: 22
Parameters (72)
    on left: 26 27, on right: 22 23 24
ParameterList (73)
    on left: 28 29, on right: 26 28
ParameterDecl (74)
    on left: 30 31 32 33, on right: 28 29
IdentifierList (75)
    on left: 34 35, on right: 30 31 34 53
Declaration (76)
    on left: 36 37, on right: 38
TopLevelDecl (77)
    on left: 38 39 40, on right: 1 38 39
FuncDecl (78)
    on left: 41, on right: 39
FunctionName (79)
    on left: 42, on right: 41
FunctionBody (80)
    on left: 43 44, on right: 41
Expression (81)
    on left: 45 46, on right: 17 46
binary_op (82)
    on left: 47 48 49 50 51, on right: 46
ConstDecl (83)
    on left: 52, on right: 36
VarDecl (84)
    on left: 53, on right: 37
Statement (85)
    on left: 54, on right: 7


State 0

    0 $accept: . SourceFile $end

    PACKAGE  shift, and go to state 1

    SourceFile     go to state 2
    PackageClause  go to state 3


State 1

    2 PackageClause: PACKAGE . PackageName

    IDENTIFIER  shift, and go to state 4

    PackageName  go to state 5


State 2

    0 $accept: SourceFile . $end

    $end  shift, and go to state 6


State 3

    1 SourceFile: PackageClause . SC ImportDecl SC TopLevelDecl SC

    SC  shift, and go to state 7


State 4

    3 PackageName: IDENTIFIER .

    $default  reduce using rule 3 (PackageName)


State 5

    2 PackageClause: PACKAGE PackageName .

    $default  reduce using rule 2 (PackageClause)


State 6

    0 $accept: SourceFile $end .

    $default  accept


State 7

    1 SourceFile: PackageClause SC . ImportDecl SC TopLevelDecl SC

    $default  reduce using rule 5 (ImportDecl)

    ImportDecl  go to state 8


State 8

    1 SourceFile: PackageClause SC ImportDecl . SC TopLevelDecl SC
    4 ImportDecl: ImportDecl . IMPORT PackageName

    IMPORT  shift, and go to state 9
    SC      shift, and go to state 10


State 9

    4 ImportDecl: ImportDecl IMPORT . PackageName

    IDENTIFIER  shift, and go to state 4

    PackageName  go to state 11


State 10

    1 SourceFile: PackageClause SC ImportDecl SC . TopLevelDecl SC

    $default  reduce using rule 40 (TopLevelDecl)

    TopLevelDecl  go to state 12


State 11

    4 ImportDecl: ImportDecl IMPORT PackageName .

    $default  reduce using rule 4 (ImportDecl)


State 12

    1 SourceFile: PackageClause SC ImportDecl SC TopLevelDecl . SC
   38 TopLevelDecl: TopLevelDecl . Declaration
   39             | TopLevelDecl . FuncDecl

    FUNC        shift, and go to state 13
    VAR         shift, and go to state 14
    SC          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16

    Declaration  go to state 17
    FuncDecl     go to state 18
    ConstDecl    go to state 19
    VarDecl      go to state 20


State 13

   41 FuncDecl: FUNC . FunctionName Signature FunctionBody

    IDENTIFIER  shift, and go to state 21

    FunctionName  go to state 22


State 14

   53 VarDecl: VAR . IdentifierList

    IDENTIFIER  shift, and go to state 23

    IdentifierList  go to state 24


State 15

    1 SourceFile: PackageClause SC ImportDecl SC TopLevelDecl SC .

    $default  reduce using rule 1 (SourceFile)


State 16

   52 ConstDecl: IDENTIFIER .

    $default  reduce using rule 52 (ConstDecl)


State 17

   38 TopLevelDecl: TopLevelDecl Declaration .

    $default  reduce using rule 38 (TopLevelDecl)


State 18

   39 TopLevelDecl: TopLevelDecl FuncDecl .

    $default  reduce using rule 39 (TopLevelDecl)


State 19

   36 Declaration: ConstDecl .

    $default  reduce using rule 36 (Declaration)


State 20

   37 Declaration: VarDecl .

    $default  reduce using rule 37 (Declaration)


State 21

   42 FunctionName: IDENTIFIER .

    $default  reduce using rule 42 (FunctionName)


State 22

   41 FuncDecl: FUNC FunctionName . Signature FunctionBody

    LRB  shift, and go to state 25

    Signature   go to state 26
    Parameters  go to state 27


State 23

   35 IdentifierList: IDENTIFIER .

    $default  reduce using rule 35 (IdentifierList)


State 24

   34 IdentifierList: IdentifierList . COM IDENTIFIER
   53 VarDecl: VAR IdentifierList .

    COM  shift, and go to state 28

    $default  reduce using rule 53 (VarDecl)


State 25

   26 Parameters: LRB . ParameterList RRB
   27           | LRB . RRB

    FUNC        shift, and go to state 29
    DOTS        shift, and go to state 30
    LRB         shift, and go to state 31
    RRB         shift, and go to state 32
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 35

    Type            go to state 36
    TypeName        go to state 37
    TypeLit         go to state 38
    ArrayType       go to state 39
    PointerType     go to state 40
    FunctionType    go to state 41
    ParameterList   go to state 42
    ParameterDecl   go to state 43
    IdentifierList  go to state 44


State 26

   41 FuncDecl: FUNC FunctionName Signature . FunctionBody

    LCB  shift, and go to state 45

    $default  reduce using rule 44 (FunctionBody)

    Block         go to state 46
    FunctionBody  go to state 47


State 27

   22 Signature: Parameters . Result
   23          | Parameters .

    FUNC        shift, and go to state 29
    LRB         shift, and go to state 48
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 49

    FUNC        [reduce using rule 23 (Signature)]
    IDENTIFIER  [reduce using rule 23 (Signature)]
    $default    reduce using rule 23 (Signature)

    Type          go to state 50
    TypeName      go to state 37
    TypeLit       go to state 38
    ArrayType     go to state 39
    PointerType   go to state 40
    FunctionType  go to state 41
    Result        go to state 51
    Parameters    go to state 52


State 28

   34 IdentifierList: IdentifierList COM . IDENTIFIER

    IDENTIFIER  shift, and go to state 53


State 29

   21 FunctionType: FUNC . Signature

    LRB  shift, and go to state 25

    Signature   go to state 54
    Parameters  go to state 27


State 30

   32 ParameterDecl: DOTS . Type

    FUNC        shift, and go to state 29
    LRB         shift, and go to state 31
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 49

    Type          go to state 55
    TypeName      go to state 37
    TypeLit       go to state 38
    ArrayType     go to state 39
    PointerType   go to state 40
    FunctionType  go to state 41


State 31

   11 Type: LRB . Type RRB

    FUNC        shift, and go to state 29
    LRB         shift, and go to state 31
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 49

    Type          go to state 56
    TypeName      go to state 37
    TypeLit       go to state 38
    ArrayType     go to state 39
    PointerType   go to state 40
    FunctionType  go to state 41


State 32

   27 Parameters: LRB RRB .

    $default  reduce using rule 27 (Parameters)


State 33

   16 ArrayType: LSB . ArrayLength RSB ElementType

    UNARY_OP  shift, and go to state 57

    ArrayLength  go to state 58
    Expression   go to state 59


State 34

   19 PointerType: STAR . BaseType

    FUNC        shift, and go to state 29
    LRB         shift, and go to state 31
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 49

    Type          go to state 60
    TypeName      go to state 37
    TypeLit       go to state 38
    ArrayType     go to state 39
    PointerType   go to state 40
    BaseType      go to state 61
    FunctionType  go to state 41


State 35

   12 TypeName: IDENTIFIER .
   35 IdentifierList: IDENTIFIER .

    COM       reduce using rule 12 (TypeName)
    COM       [reduce using rule 35 (IdentifierList)]
    RRB       reduce using rule 12 (TypeName)
    $default  reduce using rule 35 (IdentifierList)


State 36

   33 ParameterDecl: Type .

    $default  reduce using rule 33 (ParameterDecl)


State 37

    9 Type: TypeName .

    $default  reduce using rule 9 (Type)


State 38

   10 Type: TypeLit .

    $default  reduce using rule 10 (Type)


State 39

   13 TypeLit: ArrayType .

    $default  reduce using rule 13 (TypeLit)


State 40

   14 TypeLit: PointerType .

    $default  reduce using rule 14 (TypeLit)


State 41

   15 TypeLit: FunctionType .

    $default  reduce using rule 15 (TypeLit)


State 42

   26 Parameters: LRB ParameterList . RRB
   28 ParameterList: ParameterList . COM ParameterDecl

    COM  shift, and go to state 62
    RRB  shift, and go to state 63


State 43

   29 ParameterList: ParameterDecl .

    $default  reduce using rule 29 (ParameterList)


State 44

   30 ParameterDecl: IdentifierList . DOTS Type
   31              | IdentifierList . Type
   34 IdentifierList: IdentifierList . COM IDENTIFIER

    FUNC        shift, and go to state 29
    COM         shift, and go to state 28
    DOTS        shift, and go to state 64
    LRB         shift, and go to state 31
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 49

    Type          go to state 65
    TypeName      go to state 37
    TypeLit       go to state 38
    ArrayType     go to state 39
    PointerType   go to state 40
    FunctionType  go to state 41


State 45

    6 Block: LCB . StatementList RCB

    $default  reduce using rule 8 (StatementList)

    StatementList  go to state 66


State 46

   43 FunctionBody: Block .

    $default  reduce using rule 43 (FunctionBody)


State 47

   41 FuncDecl: FUNC FunctionName Signature FunctionBody .

    $default  reduce using rule 41 (FuncDecl)


State 48

   11 Type: LRB . Type RRB
   26 Parameters: LRB . ParameterList RRB
   27           | LRB . RRB

    FUNC        shift, and go to state 29
    DOTS        shift, and go to state 30
    LRB         shift, and go to state 31
    RRB         shift, and go to state 32
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 35

    Type            go to state 67
    TypeName        go to state 37
    TypeLit         go to state 38
    ArrayType       go to state 39
    PointerType     go to state 40
    FunctionType    go to state 41
    ParameterList   go to state 42
    ParameterDecl   go to state 43
    IdentifierList  go to state 44


State 49

   12 TypeName: IDENTIFIER .

    $default  reduce using rule 12 (TypeName)


State 50

   25 Result: Type .

    $default  reduce using rule 25 (Result)


State 51

   22 Signature: Parameters Result .

    $default  reduce using rule 22 (Signature)


State 52

   24 Result: Parameters .

    $default  reduce using rule 24 (Result)


State 53

   34 IdentifierList: IdentifierList COM IDENTIFIER .

    $default  reduce using rule 34 (IdentifierList)


State 54

   21 FunctionType: FUNC Signature .

    $default  reduce using rule 21 (FunctionType)


State 55

   32 ParameterDecl: DOTS Type .

    $default  reduce using rule 32 (ParameterDecl)


State 56

   11 Type: LRB Type . RRB

    RRB  shift, and go to state 68


State 57

   45 Expression: UNARY_OP .

    $default  reduce using rule 45 (Expression)


State 58

   16 ArrayType: LSB ArrayLength . RSB ElementType

    RSB  shift, and go to state 69


State 59

   17 ArrayLength: Expression .
   46 Expression: Expression . binary_op Expression

    LOG_AND  shift, and go to state 70
    LOG_OR   shift, and go to state 71
    REL_OP   shift, and go to state 72
    ADD_OP   shift, and go to state 73
    MUL_OP   shift, and go to state 74

    $default  reduce using rule 17 (ArrayLength)

    binary_op  go to state 75


State 60

   20 BaseType: Type .

    $default  reduce using rule 20 (BaseType)


State 61

   19 PointerType: STAR BaseType .

    $default  reduce using rule 19 (PointerType)


State 62

   28 ParameterList: ParameterList COM . ParameterDecl

    FUNC        shift, and go to state 29
    DOTS        shift, and go to state 30
    LRB         shift, and go to state 31
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 35

    Type            go to state 36
    TypeName        go to state 37
    TypeLit         go to state 38
    ArrayType       go to state 39
    PointerType     go to state 40
    FunctionType    go to state 41
    ParameterDecl   go to state 76
    IdentifierList  go to state 44


State 63

   26 Parameters: LRB ParameterList RRB .

    $default  reduce using rule 26 (Parameters)


State 64

   30 ParameterDecl: IdentifierList DOTS . Type

    FUNC        shift, and go to state 29
    LRB         shift, and go to state 31
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 49

    Type          go to state 77
    TypeName      go to state 37
    TypeLit       go to state 38
    ArrayType     go to state 39
    PointerType   go to state 40
    FunctionType  go to state 41


State 65

   31 ParameterDecl: IdentifierList Type .

    $default  reduce using rule 31 (ParameterDecl)


State 66

    6 Block: LCB StatementList . RCB
    7 StatementList: StatementList . Statement SC

    RETURN  shift, and go to state 78
    RCB     shift, and go to state 79

    Statement  go to state 80


State 67

   11 Type: LRB Type . RRB
   33 ParameterDecl: Type .

    RRB  shift, and go to state 68

    RRB       [reduce using rule 33 (ParameterDecl)]
    $default  reduce using rule 33 (ParameterDecl)


State 68

   11 Type: LRB Type RRB .

    $default  reduce using rule 11 (Type)


State 69

   16 ArrayType: LSB ArrayLength RSB . ElementType

    FUNC        shift, and go to state 29
    LRB         shift, and go to state 31
    LSB         shift, and go to state 33
    STAR        shift, and go to state 34
    IDENTIFIER  shift, and go to state 49

    Type          go to state 81
    TypeName      go to state 37
    TypeLit       go to state 38
    ArrayType     go to state 39
    ElementType   go to state 82
    PointerType   go to state 40
    FunctionType  go to state 41


State 70

   48 binary_op: LOG_AND .

    $default  reduce using rule 48 (binary_op)


State 71

   47 binary_op: LOG_OR .

    $default  reduce using rule 47 (binary_op)


State 72

   49 binary_op: REL_OP .

    $default  reduce using rule 49 (binary_op)


State 73

   50 binary_op: ADD_OP .

    $default  reduce using rule 50 (binary_op)


State 74

   51 binary_op: MUL_OP .

    $default  reduce using rule 51 (binary_op)


State 75

   46 Expression: Expression binary_op . Expression

    UNARY_OP  shift, and go to state 57

    Expression  go to state 83


State 76

   28 ParameterList: ParameterList COM ParameterDecl .

    $default  reduce using rule 28 (ParameterList)


State 77

   30 ParameterDecl: IdentifierList DOTS Type .

    $default  reduce using rule 30 (ParameterDecl)


State 78

   54 Statement: RETURN . IDENTIFIER

    IDENTIFIER  shift, and go to state 84


State 79

    6 Block: LCB StatementList RCB .

    $default  reduce using rule 6 (Block)


State 80

    7 StatementList: StatementList Statement . SC

    SC  shift, and go to state 85


State 81

   18 ElementType: Type .

    $default  reduce using rule 18 (ElementType)


State 82

   16 ArrayType: LSB ArrayLength RSB ElementType .

    $default  reduce using rule 16 (ArrayType)


State 83

   46 Expression: Expression . binary_op Expression
   46           | Expression binary_op Expression .

    LOG_AND  shift, and go to state 70
    LOG_OR   shift, and go to state 71
    REL_OP   shift, and go to state 72
    ADD_OP   shift, and go to state 73
    MUL_OP   shift, and go to state 74

    LOG_AND   [reduce using rule 46 (Expression)]
    LOG_OR    [reduce using rule 46 (Expression)]
    REL_OP    [reduce using rule 46 (Expression)]
    ADD_OP    [reduce using rule 46 (Expression)]
    MUL_OP    [reduce using rule 46 (Expression)]
    $default  reduce using rule 46 (Expression)

    binary_op  go to state 75


State 84

   54 Statement: RETURN IDENTIFIER .

    $default  reduce using rule 54 (Statement)


State 85

    7 StatementList: StatementList Statement SC .

    $default  reduce using rule 7 (StatementList)
